[workspace]
members = [
    "cli",
    "core",
    "download",
    "download_http",
    "download_types",
    "extractor_api",
    "extractors/bandcamp",
    "extractors/soundcloud",
    "extractors/youtube",
    "fuckinguri",
    "format_picker_api",
    "format_pickers/jrsonnet",
]

[patch.crates-io]
regress = { git = "https://github.com/ridiculousfish/regress.git", rev = "ac59d90fd0b0f8f6373457a45b0f3e811a51c9b8" }
