[package]
name = "reytan_extractor_api"
version = "0.1.0"
edition = "2021"
description = "reytan extractor traits and structs"
license = "Apache-2.0"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.58"
chrono = { version = "0.4.22", default-features = false, features = [
    "std",
    "serde",
] }
http-types = "2.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.86"
smart-default = "0.6.0"
surf = { version = "2.3.2" }
sys-locale = "0.2.1"
url = "2.2.2"
