[package]
name = "reytan_extractor_api"
version = "0.1.0"
edition = "2021"
description = "reytan extractor traits and structs"
license = "Apache-2.0"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]

[features]
impersonate_chrome = ["ratcurl/impersonate-chrome"]
impersonate_ff = ["ratcurl/impersonate-ff"]

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.58"
chrono = { version = "0.4.22", default-features = false, features = [
    "std",
    "serde",
] }
fuckinguri = { path = "../fuckinguri" }
ratcurl = { git = "https://codeberg.org/transcast/ratcurl.git", branch = "main" }
ratmom = { git = "https://codeberg.org/transcast/ratmom.git", branch = "main", default-features = false, features = [
    "http2",
    "json",
    "text-decoding",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.86"
smart-default = "0.6.0"
sys-locale = "0.2.1"
tokio = { version = "1.21.2", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
