[package]
name = "fuckinguri"
version = "0.1.0"
edition = "2021"
description = "painkiller for http::Uri existing"
license = "Apache-2.0"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
url = "2.3.1"
