[package]
name = "reytan_extractor_bandcamp"
version = "0.1.0"
edition = "2021"
description = "reytan extractor for Bandcamp"
license = "Apache-2.0"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]
keywords = ["scraper", "bandcamp"]

[dependencies]
nipper = "0.1.9"
once_cell = "1.15.0"
reytan_extractor_api = { path = "../../extractor_api" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
smart-default = "0.6.0"
tokio = { version = "1.16.1", features = ["full"] }
