[package]
name = "reytan_extractor_soundcloud"
version = "0.1.0"
edition = "2021"
description = "reytan extractor for Soundcloud"
license = "Apache-2.0"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]
keywords = ["scraper", "soundcloud"]

[dependencies]
nipper = "0.1.9"
itertools = "0.10.5"
once_cell = "1.15.0"
regex = "1.6.0"
reytan_extractor_api = { path = "../../extractor_api" }
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.79"
smart-default = "0.6.0"
qstring = "0.7.2"
tokio = { version = "1.16.1", features = ["full"] }
