[package]
name = "reytan_format_picker_jrsonnet"
version = "0.1.0"
edition = "2021"
description = "reytan format picker implementation for jsonnet"
license = "Apache-2.0"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jrsonnet-evaluator = "0.4.2"
reytan_format_picker_api = { path = "../../format_picker_api" }
serde_json = "1.0.91"
