[package]
name = "reytan_context"
version = "0.1.0"
edition = "2021"
description = "reytan context types and utils"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]

[dependencies]
reqwest = { version = "0.11.12", features = [
    "gzip",
    "brotli",
    "deflate",
    "cookies",
    "json",
] }
sys-locale = "0.2.1"
