[package]
name = "reytan_extractor_api"
version = "0.1.0"
edition = "2021"
description = "reytan extractor traits and structs"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
reqwest = { version = "0.11.12", features = [
    "gzip",
    "brotli",
    "deflate",
    "cookies",
    "json",
] }
reytan_context = { path = "../context" }
serde = { version = "1.0.136", features = ["derive"] }
smart-default = "0.6.0"
url = "2.2.2"
