[package]
name = "reytan_extractor_youtube"
version = "0.1.0"
edition = "2021"
description = "reytan extractor for YouTube"
authors = ["Lauren Liberda <lauren@selfisekai.rocks>"]
keywords = ["scraper", "youtube"]

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
boa_engine = "0.16.0"
futures = "^0.3"
lazy_static = "1.4.0"
once_cell = "1.15.0"
regex = "1.6.0"
reytan_context = { path = "../../context" }
reytan_extractor_api = { path = "../../extractor_api" }
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.79"
smart-default = "0.6.0"
tokio = { version = "1.16.1", features = ["full"] }
qstring = "0.7.2"
url = "2.2.2"
